<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.info.TopicInfoViewModel" />
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="24dp">

      <org.oppia.android.app.customview.LessonThumbnailImageView
        android:id="@+id/topic_thumbnail_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:entityId="@{viewModel.topic.topicId}"
        app:entityType="@{viewModel.entityType}"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_status_image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:lessonThumbnail="@{viewModel.topic.topicThumbnail}" />

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/thumbnail_gradient"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/topic_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@{viewModel.topic.name}"
        android:textColor="@color/oppiaPrimaryText"
        android:textDirection="locale"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/topic_thumbnail_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <TextView
        android:id="@+id/story_count_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:text="@{@plurals/story_count(viewModel.topic.storyCount, viewModel.topic.storyCount)}"
        android:textColor="@color/oppiaPrimaryText"
        android:textDirection="locale"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_name_text_view" />

      <TextView
        android:id="@+id/topic_description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:maxLines="@{viewModel.isDescriptionExpanded() ? @integer/topic_description_expanded : @integer/topic_description_collapsed}"
        android:text="@{viewModel.topicDescription}"
        android:textColor="@color/oppiaPrimaryText"
        android:textDirection="locale"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_count_text_view" />

      <TextView
        android:id="@+id/see_more_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:minHeight="48dp"
        android:onClick="@{(v) -> viewModel.clickSeeMore()}"
        android:paddingTop="8dp"
        android:text="@{viewModel.isDescriptionExpanded() ? @string/see_less : @string/see_more}"
        android:textColor="@color/colorPrimary"
        android:textDirection="locale"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="@{viewModel.isSeeMoreVisible() ? View.VISIBLE : View.GONE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_description_text_view" />

      <ImageView
        android:id="@+id/download_status_image_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:src="@{viewModel.downloadStatusIndicatorDrawableResourceId, default=@drawable/ic_available_offline_primary_24dp}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_more_text_view" />

      <TextView
        android:id="@+id/download_story_count_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/topic_downloaded"
        android:textColor="@color/oppiaPrimaryText"
        android:textDirection="locale"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/download_status_image_view"
        app:layout_constraintStart_toEndOf="@+id/download_status_image_view"
        app:layout_constraintTop_toTopOf="@+id/download_status_image_view" />

      <TextView
        android:id="@+id/download_size_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:text="@{String.format(@string/topic_download_text, viewModel.topicSize)}"
        android:textColor="@color/oppiaPrimaryText"
        android:textDirection="locale"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/download_status_image_view"
        app:layout_constraintStart_toEndOf="@+id/download_story_count_text_view"
        app:layout_constraintTop_toTopOf="@+id/download_status_image_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</layout>
