...
  <string name="lesson_replay_button_text">Replay</string>
  <string name="state_end_exploration_button">Return To Topic</string>
  <string name="previous_responses_header">Previous Responses (%d)</string>
  <string name="image_interaction_answer_text">Clicks on %s</string>
  <string name="state_learn_again_button">Learn Again</string>
  <string name="topic_download_text">(%s)</string>
  <string name="see_more">See More</string>
  <string name="see_less">See Less</string>
  <string name="FAQs">FAQs</string>
  <string name="featured_questions">Featured Questions</string>
  <string name="frequently_asked_questions">Frequently Asked Questions</string>
  <string name="faq_activity_label">FAQs (Frequently Asked Questions)</string>
  <string name="frequently_asked_questions_FAQ">Frequently Asked Questions (FAQs)</string>
...
